--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -15,5 +15,4 @@ jobs:
   secrets-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Test use secrets
-        run: echo secrets DB_PASSWORD is ${{secrets.DB_PASSWORD}}
+      - run: echo secrets DB_PASSWORD is ${{secrets.DB_PASSWORD}}
