--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -15,4 +15,4 @@ jobs:
   secrets-test:
     runs-on: ubuntu-latest
     steps:
-      - run: echo secret DB_PASSWORD is ${{secrets.DB_PASSWORD}}
+      - run: echo secret ${{secrets.DB_PASSWORD}}
