--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -15,4 +15,6 @@ jobs:
   secrets-test:
     runs-on: ubuntu-latest
     steps:
+      - uses: action/checkout@v3
       - run: echo secret ${{secrets.DB_PASSWORD}}
+      - run: npm install
